# targetran

./: .gitignore  CITATION.cff  README.md  requirements.txt  setup.cfg
.github/workflows/: ci.yml
docs/: API.md
examples/: annotations.json  bboxes.json  run_examples.py  run_pt_dataset_example.py  run_tf_dataset_example.py
examples/image_classification/: run_image_classification_model_training_example.py
examples/kaggle/: run_image_classification_kaggle_example.py  run_tf_dataset_kaggle_example.py
examples/local/: run_pt_dataset_local_example.py  run_tf_dataset_local_example.py
examples/tests/: run_tf_test.py
targetran/: __init__.py  _check.py  _functional.py  _helper.py  _np.py  _np_functional.py  _test.py  _tf.py  _tf_functional.py  _transform.py  _typing.py  test.py  utils.py
targetran/np/: __init__.py  _np.py
targetran/tf/: __init__.py  _gradcam.py  _tf.py
targetran/utils/: __init__.py  _utils.py
tests/: _test.py  install_from_local.sh  install_from_local_and_test.sh  run_code_checks.sh  run_pt_dataset_test.py  run_tf_dataset_test.py  run_tf_dataset_timing.py  run_tf_test.py
