[metadata]
name = targetran
version = 0.8.1
author = Bosco Yung
author_email = xtorch501@gmail.com
description = Target transformation for data augmentation in objection detection
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bhky/targetran
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    opencv-python
    numpy>=1.14.0
    tensorflow>=2.0.0

[options.package_data]
targetran = py.typed