[metadata]
name = targetran
version = attr: targetran.__version__
author = attr: targetran.__author__
author_email = xtorch501@gmail.com
description = Target transformation for data augmentation in objection detection
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bhky/targetran
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    opencv-python
    numpy>=1.22.0
    tensorflow>=2.7.0

[options.package_data]
targetran = py.typed